templates/datakit-operator.template.yaml
## DataKit-Operator (@APP_VERSION) Configuration YAML
---
apiVersion: v1
kind: Service
metadata:
  name: datakit-operator
  namespace: datakit
spec:
  selector:
    app: datakit-operator
  ports:
    - name: http
      port: 443
      targetPort: 9543

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datakit-operator
  namespace: datakit
  labels:
    app: datakit-operator
spec:
  replicas: 1  # Do not change the ReplicaSet number!
  selector:
     matchLabels:
       app: datakit-operator
  template:
    metadata:
      labels:
        app: datakit-operator
    spec:
      serviceAccountName: datakit-operator
      containers:
        - name: operator
          image: (@REPOSITORY):(@APP_VERSION)
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9543
          readinessProbe:
            httpGet:
              path: /v1/ping
              port: http
              scheme: HTTPS
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: datakit-operator-mutation
webhooks:
  - name: "mutation.datakit.svc"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: datakit
        name: datakit-operator
        path: "/v1/webhooks/inject"
      caBundle: (@CABUNDLE)
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: IfNeeded
    failurePolicy: Ignore
